<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.armhansa.app.cutepid.controller.CreditActivity">

    <TextView
        android:text="@string/credit"
        android:textSize="45sp"
        android:textColor="#0000FF"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"/>

    <TextView
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <TextView
        android:text="@string/creditIconApp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"/>

    <TextView
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <TextView
        android:text="@string/creditLoginBG"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"/>

    <TextView
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <TextView
        android:text="@string/creditIconFilterSetting"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"/>

    <TextView
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <TextView
        android:text="@string/creditEditProfile"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <TextView
        android:text="@string/endCredit"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
