<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="10dp"
    android:weightSum="5"
    tools:context="com.armhansa.app.cutepid.controller.SetFilterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:text="@string/search_setting"
        android:textStyle="bold"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/what_you_want_to_see"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:text="@string/gender"
        android:textSize="25sp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_gravity="center"
        android:weightSum="2"
        android:padding="10dp">
        <Button
            android:id="@+id/men"
            android:text="@string/men"
            android:background="#9999FF"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="10dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/women"
            android:text="@string/women"
            android:background="#FFFFFF"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
        android:id="@+id/rangeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        rsb:absoluteMaxValue="100"
        rsb:absoluteMinValue="18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/set"
        android:text="@string/edit"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:background="#FF5555"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
