<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    android:padding="5dp"
    tools:context="com.armhansa.app.cutepid.fragment_home.HomeFragment">

    <TextView
        android:id="@+id/noUser"
        android:text="@string/please_tab_to_refresh"
        android:textSize="25sp"
        android:textColor="#FF0000"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>


    <LinearLayout
        android:id="@+id/allContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <TextView
            android:id="@+id/firstName"
            android:text="@string/firstname"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"/>

        <TextView
            android:id="@+id/status"
            android:text="@string/status"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:weightSum="2">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent" />


            <Button
                android:id="@+id/dislike"
                android:text="@string/dislike"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:background="#444"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/like"
                android:text="@string/like"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:background="#F55"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>



</LinearLayout>
